--- a/sections/presentations.html
+++ b/sections/presentations.html
@@ -2,27 +2,22 @@
 <section id="presentations" class="section">
   <h2>Presentations</h2>
   <div class="timeline">
-    
+
+    <!-- October 2025 -->
     <div class="timeline-item">
       <div class="timeline-card">
         <div class="timeline-header">
-          <img src="images/logos/conference.png" alt="Conference">
+          <img src="images/logos/SmallBodies.png" alt="Conference">
           <div>
-            <strong>Shock-driven synthesis of organic compounds under planetary conditions</strong>
-            <div class="meta">Oral presentation · Astrobiology Conference · Paris · 2024</div>
+            <strong>Mechanochemistry and the fate of extraterrestrial organic matter</strong>
+            <div class="meta">Oral Communication · “Small Bodies Day” Symposium · IPGP · October 2025</div>
           </div>
         </div>
-        <p><em>Impact-induced chemistry under early planetary environments</em></p>
+        <p><em>Mechanochemical processing of organic matter in small bodies</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>This presentation explored the mechanisms by which shock waves generated from planetary impacts can drive the synthesis of complex organic molecules. We investigated how the extreme pressures and temperatures created during impact events on early Earth and other planetary bodies could have facilitated prebiotic chemistry.</p>
-          <p>Key topics covered included shock compression experiments, thermodynamic modeling of impact conditions, and detection of synthesized organic compounds relevant to the origin of life.</p>
-          <div class="expand-gallery">
-            <img src="images/presentations/shock1.jpg" alt="Planetary impact simulation">
-            <img src="images/presentations/shock2.jpg" alt="Space environment">
-            <img src="images/presentations/shock3.jpg" alt="Laboratory setup">
-          </div>
+          <p>This talk discussed how mechanochemical processes induced by impacts and collisions affect the preservation, transformation, and degradation of extraterrestrial organic matter in small Solar System bodies.</p>
         </div>
       </div>
     </div>
@@ -30,23 +25,157 @@
     <div class="timeline-item">
       <div class="timeline-card">
         <div class="timeline-header">
-          <img src="images/logos/eana.png" alt="EANA">
+          <img src="images/logos/AbGradE.png" alt="Conference">
           <div>
-            <strong>Mechanochemical pathways toward prebiotic molecules</strong>
-            <div class="meta">Poster presentation · EANA Meeting · Lisbon · 2023</div>
+            <strong>The effect of mechanochemistry on the formation of extraterrestrial organic matter</strong>
+            <div class="meta">Oral Communication · AbGradE’25 Symposium · October 2025</div>
           </div>
         </div>
-        <p><em>Solid-state routes to prebiotic molecular complexity</em></p>
+        <p><em>Mechanochemical pathways in extraterrestrial environments</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>This poster presentation detailed our research into mechanochemical reactions as alternative pathways for generating prebiotic molecules. Unlike traditional solution-based chemistry, mechanochemical processes involve grinding and milling solid reactants, which can create unique reaction conditions relevant to early Earth environments.</p>
-          <p>We demonstrated how mechanical energy can drive the formation of amino acids, nucleobases, and other building blocks of life without the need for aqueous solutions, opening new possibilities for understanding chemical evolution in diverse planetary settings.</p>
-          <div class="expand-gallery">
-            <img src="images/presentations/mech1.jpg" alt="Molecular structures">
-            <img src="images/presentations/mech2.jpg" alt="Research equipment">
+          <p>This presentation explored how mechanochemical reactions contribute to the synthesis and evolution of organic compounds in extraterrestrial contexts.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/EANA.png" alt="Poster">
+          <div>
+            <strong>EANA 2025 Poster Presentation</strong>
+            <div class="meta">Poster Presentation · European Astrobiology Network Association · October 2025</div>
           </div>
         </div>
+        <p><em>Astrobiology and mechanochemistry</em></p>
+      </div>
+    </div>
+
+    <!-- July 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/BEACON.png" alt="Conference">
+          <div>
+            <strong>Effect of Mechanochemical Events Into Extraterrestrial Organic Matter and Its Implications for Exogenous Delivery</strong>
+            <div class="meta">Oral Communication · BEACON 2025 · July 2025</div>
+          </div>
+        </div>
+        <p><em>Impact-driven processing of organic matter in space</em></p>
+      </div>
+    </div>
+
+    <!-- June 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/IMPMC_PhD_Day.png" alt="Conference">
+          <div>
+            <strong>The effect of shock/impacts on the exogenous delivery of organic matter</strong>
+            <div class="meta">Oral Communication · IMPMC PhD Day · June 2025</div>
+          </div>
+        </div>
+        <p><em>Shock processes and organic survival</em></p>
+      </div>
+    </div>
+
+    <!-- March 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/RED.png" alt="Course">
+          <div>
+            <strong>Astrobiology Introductory Course</strong>
+            <div class="meta">Course · Rencontres Exobiologiques pour Doctorants (RED) · March 2025</div>
+          </div>
+        </div>
+        <p><em>Foundations of astrobiology</em></p>
+      </div>
+    </div>
+
+      <!-- January 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/MNHN.png" alt="Presentation">
+          <div>
+            <strong>Mechanochemistry and astrobiology: mimicking impact reactions</strong>
+            <div class="meta">Presentation · Muséum national d’Histoire naturelle (MNHN) · January 2025</div>
+          </div>
+        </div>
+        <p><em>Experimental simulations of impact chemistry</em></p>
+      </div>
+    </div>
+
+    <!-- November 2024 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/IST_PhD_Open_Day.png" alt="Poster">
+          <div>
+            <strong>Shock-Impact Events and the Origin of Life: a mechanochemical approach</strong>
+            <div class="meta">Poster Session · IST PhD Open Day · November 2024</div>
+          </div>
+        </div>
+        <p><em>Impact-driven prebiotic chemistry</em></p>
+      </div>
+    </div>
+
+    <!-- October 2024 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/NInTec.png" alt="Conference">
+          <div>
+            <strong>Impact events of extraterrestrial bodies: The bridge between exogenous delivery and the origin of life</strong>
+            <div class="meta">Oral Communication · NInTec Science Days · October 2024</div>
+          </div>
+        </div>
+        <p><em>From impacts to prebiotic chemistry</em></p>
+      </div>
+    </div>
+
+    <!-- August 2022 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/EuChemS.png" alt="Conference">
+          <div>
+            <strong>Why not nucleosides in meteorites? An approach based on mechanochemical studies</strong>
+            <div class="meta">Oral Communication · EuChemS Chemistry Congress · August 2022</div>
+          </div>
+        </div>
+        <p><em>Mechanochemistry and meteoritic organics</em></p>
+      </div>
+    </div>
+
+    <!-- March 2022 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/CQEDays2022.png" alt="Poster">
+          <div>
+            <strong>Ribonucleosides stability and prebiotic synthesis</strong>
+            <div class="meta">Poster Session · CQE Days · March 2022</div>
+          </div>
+        </div>
+        <p><em>Prebiotic nucleoside chemistry</em></p>
+      </div>
+    </div>
+
+    <!-- October 2020 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/CICS-UBI_Symposium.png" alt="Symposium">
+          <div>
+            <strong>XV Annual CICS-UBI Symposium</strong>
+            <div class="meta">Symposium · CICS-UBI · October 2020</div>
+          </div>
+        </div>
+        <p><em>Early-stage research presentation</em></p>
       </div>
     </div>
 
