--- a/sections/experience.html
+++ b/sections/experience.html
@@ -1,6 +1,22 @@
 <!-- EXPERIENCE -->
 <section id="experience" class="section">
+ 
 <h2>Experience</h2>
+
+<!-- March 2025 -->
+    <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/RED.png" alt="Course">
+          <div>
+            <strong>Astrobiology Introductory Course</strong>
+            <div class="meta">Course · Rencontres Exobiologiques pour Doctorants (RED) · March 2025</div>
+          </div>
+        </div>
+        <p><em>Foundations of astrobiology</em></p>
+      </div>
+    </div>
+
 <div class="timeline">
   <div class="timeline-item">
     <div class="timeline-card">
