--- a/sections/education.html
+++ b/sections/education.html
@@ -41,9 +41,23 @@
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>My Master's thesis investigated the stability of ribonucleosides under mechanochemical conditions and their potential degradation pathways. Ribonucleosides are the building blocks of RNA and are considered crucial molecules in the origin of life.</p>
-          <p>The research explored how mechanical energy and the presence of inorganic species (such as metal ions and carbonates) could influence the transformation of these molecules. This work provided insights into both the formation and degradation of prebiotic molecules under conditions relevant to early Earth environments.</p>
-          <p>The findings contributed to our understanding of how RNA components could have been synthesized or modified through mechanochemical processes, offering a new perspective on prebiotic chemistry beyond traditional solution-based reactions.</p>
+          
+          <p>
+          Exogenous delivery of organic molecules could have played a significant role in prebiotic synthesis, based on the detection of RNA nucleobases and ribose in meteorites. However, ribonucleosides were never detected. Meteoroid atmospheric entry conditions are severe and could lead to chemical modifications via mechanochemical reactions. Moreover, oxidation reactions are also plausible, producing reactive species such as carbonate (CO<sub>3</sub><sup>2−</sup>).
+          </p>
+
+          <p>
+          In this way, the mechanochemical treatment of ribonucleosides with carbonate and metal salts (Ni, Al, Na, and K, which are present within meteoroids) was explored, leading to the formation of guanine, adenine, and uracil as degradation products. Ethanol formation was observed for metal samples (Ni<sup>2+</sup> and Al<sup>3+</sup>), indicating ribose decomposition.
+          </p>
+
+          <p>
+          Additionally, degradation mechanisms using theoretical studies were performed with carbonate and ribonucleosides as reagents, suggesting that water-assisted ring opening was the preferred mechanism.
+          </p>
+
+          <p>
+          Considering the aforementioned results, this work proposes that ribonucleoside degradation through mechanochemical reactions, intensified by carbonate and metal ions, is a novel model that justifies the presence of nucleobases in meteorite extracts.
+          </p>
+
           <div class="expand-gallery">
             <img src="images/education/msc1.jpg" alt="Master's research">
             <img src="images/education/msc2.jpg" alt="Chemical analysis">
@@ -65,10 +79,27 @@
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
-          <p>During my undergraduate studies, I developed a strong foundation in chemistry with a focus on industrial applications. My bachelor's thesis focused on optimizing synthetic routes for quinoline N-oxides, which are important intermediates in pharmaceutical and materials chemistry.</p>
-          <p>The research involved designing and testing various synthetic methodologies, analyzing reaction conditions, and optimizing yields and selectivity. This work provided hands-on experience with organic synthesis, analytical techniques, and process optimization.</p>
-          <p>This program combined theoretical knowledge with practical laboratory skills, preparing me for advanced research in chemistry and giving me a comprehensive understanding of chemical processes from both fundamental and applied perspectives.</p>
-          <div class="expand-gallery">
+          
+              <p>
+              Heterocyclic compounds have been studied since the last century. Due to the presence of heteroatoms, these compounds exhibit unique chemical and physical properties, which allow them to interact efficiently with other molecules or even with biological systems.
+              </p>
+
+              <p>
+              Within this group of compounds are heterocyclic N-oxides, which have attracted significant attention because of the roles they play as synthetic intermediates, protecting groups, oxidizing agents, catalysts, and ligands in metal complexes. In addition, heterocyclic N-oxides have emerged as a class of compounds with anticancer, antibacterial, antihypertensive, antiparasitic, anti-HIV, anti-inflammatory, herbicidal, and neuroprotective activities.
+              </p>
+
+              <p>
+              With the aim of optimizing the formation of quinoline N-oxides from the reduction of (2-(2-nitrobenzylidene)cyclohexane-1,3-dione), eight different reaction conditions were tested, involving five distinct reducing agents.
+              </p>
+
+              <p>
+              In this way, it was possible to obtain the quinoline N-oxide exclusively by using either stannous chloride or its dihydrate analogue as reducing agents, at room temperature, with yields of 67% and 53%, respectively. In all other attempts, using different reducing agents under different reaction conditions, a mixture of quinoline N-oxide and the corresponding quinoline was obtained.
+              </p>
+
+              <p>
+              All compounds or mixtures of compounds obtained were characterized by proton nuclear magnetic resonance spectroscopy.
+              </p>
+
             <img src="images/education/bsc1.jpg" alt="Undergraduate research">
             <img src="images/education/bsc2.jpg" alt="University laboratory">
           </div>
