--- a/sections/presentations.html
+++ b/sections/presentations.html
@@ -81,25 +81,11 @@
       </div>
     </div>
 
-    <!-- March 2025 -->
+       <!-- January 2025 -->
     <div class="timeline-item">
       <div class="timeline-card">
         <div class="timeline-header">
-          <img src="images/logos/RED.png" alt="Course">
-          <div>
-            <strong>Astrobiology Introductory Course</strong>
-            <div class="meta">Course · Rencontres Exobiologiques pour Doctorants (RED) · March 2025</div>
-          </div>
-        </div>
-        <p><em>Foundations of astrobiology</em></p>
-      </div>
-    </div>
-
-      <!-- January 2025 -->
-    <div class="timeline-item">
-      <div class="timeline-card">
-        <div class="timeline-header">
-          <img src="images/logos/MNHN.png" alt="Presentation">
+          <img src="images/logos/mnhn.png" alt="Presentation">
           <div>
             <strong>Mechanochemistry and astrobiology: mimicking impact reactions</strong>
             <div class="meta">Presentation · Muséum national d’Histoire naturelle (MNHN) · January 2025</div>
