--- a/sections/store.html
+++ b/sections/store.html
@@ -1,12 +1,22 @@
 <!-- store.html (SAFE / public-ready) -->
 <!doctype html>
 <html lang="pt">
+  
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Cientifica(mente) — Store</title>
   <link rel="stylesheet" href="/styles.css" />
 </head>
+
+<!-- STORE SEPARATOR -->
+<section class="section store-separator">
+  <div class="separator-wrapper">
+    <hr class="separator-line">
+    <div class="separator-text">STORE</div>
+  </div>
+</section>
+
 <body>
   <main class="site">
     <!-- STORE PAGE -->
