--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <!-- Simple top navigation -->
+  <nav class="main-nav">
+    <a href="index.html">Home</a>
+    <a href="#education">Education</a>
+    <a href="#experience">Experience</a>
+    <a href="#publications">Publications</a>
+    <a href="#tutoring">Tutoring</a>
+    <a href="store.html">Store</a>
+  </nav>
+
+  <!-- SPA content container -->
   <div class="site" id="mainContent">
     <!-- Sections will be dynamically loaded here -->
   </div>
@@ -37,7 +49,7 @@
         }
       }
 
-      // Initialize all scripts after sections are loaded
+      // Initialize scripts after sections are loaded
       if (typeof initializeScripts === 'function') {
         initializeScripts();
       }
@@ -50,7 +62,7 @@
       loadSections();
     }
   </script>
-  
+
   <script src="script.js"></script>
 </body>
 </html>
