--- a/sections/tutoring.html
+++ b/sections/tutoring.html
@@ -22,13 +22,23 @@
       Precisas de ajuda? Fala comigo!
     </p>
 
-    <div style="margin-top:2rem; text-align:center;">
+    <div style="margin-top:2rem; text-align:center; display:flex; gap:16px; justify-content:center; flex-wrap:wrap;">
       <a
         href="mailto:gustavopinhomaia@gmail.com?subject=Pedido%20de%20Explicações%20em%20Química&body=Olá,%0D%0A%0D%0AGostaria%20de%20saber%20mais%20sobre%20as%20aulas.%0D%0A%0D%0AObrigado!"
         class="btn"
         style="font-size:1.1em; padding:12px 22px; border-radius:999px;"
       >
         Contactar
+      </a>
+
+      <!-- New Store button that leads to store.html -->
+      <a
+        href="store.html"
+        class="btn"
+        style="font-size:1.1em; padding:12px 22px; border-radius:999px; background:#4CAF50; color:white; text-decoration:none;"
+        aria-label="Ir para a loja"
+      >
+        Loja
       </a>
     </div>
 
