--- a/sections/experience.html
+++ b/sections/experience.html
@@ -30,8 +30,8 @@
       <div class="expand-body">
         <p>Collaborative research at MNHN focusing on mechanochemical synthesis, sample analysis, and astrobiology methods.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/mnhn1.jpg" alt="">
-          <img src="images/experiences/mnhn2.jpg" alt="">
+          <img src="images/mnhn1.jpg" alt="">
+          <img src="images/mnhn2.jpg" alt="">
         </div>
       </div>
     </div>
@@ -97,7 +97,7 @@
       <div class="expand-body">
         <p>Oversaw fiscal compliance, audited financial statements, and coordinated council meetings.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/aneq1.jpg" alt="">
+          <img src="images/aneq1.jpg" alt="">
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
       <div class="expand-body">
         <p>Assisted the president and managed organizational activities for student chemistry association.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/aneq2.jpg" alt="">
+          <img src="images/aneq2.jpg" alt="">
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
       <div class="expand-body">
         <p>Managed student projects, coordinated events, and facilitated communication between members.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/ubiquimica2.png" alt="">
+          <img src="images/ubiquimica2.png" alt="">
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@
       <div class="expand-body">
         <p>Conducted laboratory research on chemical synthesis under supervision of faculty researchers.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/ubi2.jpg" alt="">
+          <img src="images/ubi2.jpg" alt="">
         </div>
       </div>
     </div>
@@ -181,7 +181,7 @@
       <div class="expand-body">
         <p>Represented the student body, conveyed concerns, and organized class activities and discussions.</p>
         <div class="expand-gallery">
-          <img src="images/experiences/ubi2.jpg" alt="">
+          <img src="images/ubi2.jpg" alt="">
         </div>
       </div>
     </div>
