--- a/sections/tutoring.html
+++ b/sections/tutoring.html
@@ -32,14 +32,16 @@
       </a>
 
       <!-- New Store button that leads to store.html -->
-      <a
-        href="store.html"
+            <a
+        href="#"
         class="btn"
         style="font-size:1.1em; padding:12px 22px; border-radius:999px; background:#4CAF50; color:white; text-decoration:none;"
-        aria-label="Ir para a loja"
+        aria-label="Mostrar mensagem da loja"
+        onclick="alert('A loja estará disponível em breve!'); return false;"
       >
         Loja
       </a>
+
     </div>
 
   </div>
