--- a/sections/tutoring.html
+++ b/sections/tutoring.html
@@ -37,7 +37,7 @@
         class="btn"
         style="font-size:1.1em; padding:12px 22px; border-radius:999px; background:#4CAF50; color:white; text-decoration:none;"
         aria-label="Mostrar mensagem da loja"
-        onclick="alert('A loja estará disponível em breve!'); return false;"
+        onclick="alert('Em desenvolvimento'); return false;"
       >
         Loja
       </a>
