--- a/sections/education.html
+++ b/sections/education.html
@@ -59,8 +59,8 @@
           </p>
 
           <div class="expand-gallery">
-            <img src="images/msc1.jpg" alt="Master's research">
-            <img src="images/msc2.jpg" alt="Chemical analysis">
+            <img src="images/msc1.png" alt="Master's research">
+            <img src="images/msc2.png" alt="Chemical analysis">
           </div>
         </div>
       </div>
@@ -100,8 +100,8 @@
               All compounds or mixtures of compounds obtained were characterized by proton nuclear magnetic resonance spectroscopy.
               </p>
 
-            <img src="images/bsc1.jpg" alt="Undergraduate research">
-            <img src="images/bsc2.jpg" alt="University laboratory">
+            <img src="images/bsc1.png" alt="Undergraduate research">
+            <img src="images/bsc2.png" alt="University laboratory">
           </div>
         </div>
       </div>
