--- a/sections/education.html
+++ b/sections/education.html
@@ -106,6 +106,30 @@
         </div>
       </div>
     </div>
-    
+  <div class="timeline-item">
+      <div class="timeline-card">
+        <div class="timeline-header">
+          <img src="images/logos/espe.png" alt="espe">
+          <div>
+            <strong>Specialization Level IV as a Mechatronics Technitian</strong>
+            <div class="meta">2020–2022 · Concluded · Instituto Superior Técnico</div>
+          </div>
+        </div>
+        <p><em>Ribonucleoside stability and prebiotic synthesis</em></p>
+      </div>
+      <div class="timeline-expand">
+        <div class="expand-body">
+          
+          <p>
+          INFORMATION
+          </p>
+          <div class="expand-gallery">
+            <img src="images/espe1.png" alt="Master's research">
+            <img src="images/espe2.png" alt="Chemical analysis">
+          </div>
+        </div>
+      </div>
+    </div>
+
   </div>
 </section>
