--- a/sections/education.html
+++ b/sections/education.html
@@ -111,7 +111,7 @@
         <div class="timeline-header">
           <img src="images/logos/espe.png" alt="espe">
           <div>
-            <strong>Specialization Level IV as a Mechatronics Technitian</strong>
+            <strong>Specialization Level IV as a Mechatronics Technician</strong>
             <div class="meta">2020–2022 · Concluded · Instituto Superior Técnico</div>
           </div>
         </div>
