--- a/sections/education.html
+++ b/sections/education.html
@@ -111,10 +111,10 @@
           <img src="images/logos/espe.png" alt="espe">
           <div>
             <strong>Specialization Level IV as a Mechatronics Technician</strong>
-            <div class="meta">2020–2022 · Concluded · Instituto Superior Técnico</div>
+            <div class="meta">2013–2016 · Concluded · Escola Profissional de Espinho</div>
           </div>
         </div>
-        <p><em>Ribonucleoside stability and prebiotic synthesis</em></p>
+        <p><em>Fully automated robot for Rescue Line Competition (RoboCupJunior)</em></p>
       </div>
       <div class="timeline-expand">
         <div class="expand-body">
