--- a/sections/publications.html
+++ b/sections/publications.html
@@ -7,7 +7,7 @@
       <div class="timeline-card">
         <div class="timeline-header">
           <div>
-            <strong>Mechanochemical Reactivity of Ribonucleosides Mediated by Inorganic Species</strong>
+            <strong>Mechanochemical Reactivity of Ribonucleosides Mediated by Inorganic Species: Implications for Extraterrestrial Organic Matter Interpretation</strong>
             <div class="meta">Gustavo P. Maia, Catarina Gonçalves, Ana J. Carvalho, Vânia André, Adelino Galvão, Ana P. C. Ribeiro, Pedro F. Pinheiro and José Armando Luísa da Silva · 2025 · Applied Sciences</div>
           </div>
         </div>
@@ -25,7 +25,7 @@
       <div class="timeline-card">
         <div class="timeline-header">
           <div>
-            <strong>Shock-Induced Degradation of Guanosine and Uridine Promoted by Nickel and Carbonate</strong>
+            <strong>Shock-Induced Degradation of Guanosine and Uridine Promoted by Nickel and Carbonate: Potential Applications</strong>
             <div class="meta">Gustavo P. Maia, José Armando Luísa da Silva, Vânia André and Adelino M. Galvão · 2023 · Molecules</div>
           </div>
         </div>
